crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__derive__batch_composite_keys-finalized-solution.snap
---
source: crates/engine/query-solver/src/tests/derive.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"Root#ext\", color=royalblue,shape=parallelogram ]\n    2 [ label = \"Query.products\" ]\n    3 [ label = \"Product.inventories\" ]\n    4 [ label = \"Product.inventoriesKeys\" ]\n    5 [ label = \"Inventory.countryId\" ]\n    6 [ label = \"InventoryKeys.countryId\" ]\n    7 [ label = \"Inventory.warehouseId\" ]\n    8 [ label = \"InventoryKeys.warehouseId\" ]\n    0 -> 1 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    8 -> 7 [ label = \"\", color=darkorchid,arrowhead=halfopen,style=dashed ]\n    2 -> 3 [ label = \"\" ]\n    2 -> 4 [ label = \"\" ]\n    4 -> 3 [ label = \"\", color=darkorchid,arrowhead=halfopen,style=dashed ]\n    3 -> 5 [ label = \"\" ]\n    4 -> 6 [ label = \"\" ]\n    6 -> 5 [ label = \"\", color=darkorchid,arrowhead=halfopen,style=dashed ]\n    3 -> 7 [ label = \"\" ]\n    4 -> 8 [ label = \"\" ]\n    1 -> 2 [ label = \"\" ]\n}\n"
---
digraph {
    0 [ label = "root" ]
    1 [ label = "Root#ext" ]
    2 [ label = "Query.products" ]
    3 [ label = "Product.inventories" ]
    4 [ label = "Product.inventoriesKeys" ]
    5 [ label = "Inventory.countryId" ]
    6 [ label = "InventoryKeys.countryId" ]
    7 [ label = "Inventory.warehouseId" ]
    8 [ label = "InventoryKeys.warehouseId" ]
    0 -> 1 [ label = "QueryPartition" ]
    8 -> 7 [ label = "Derive" ]
    2 -> 3 [ label = "Field" ]
    2 -> 4 [ label = "Field" ]
    4 -> 3 [ label = "Derive" ]
    3 -> 5 [ label = "Field" ]
    4 -> 6 [ label = "Field" ]
    6 -> 5 [ label = "Derive" ]
    3 -> 7 [ label = "Field" ]
    4 -> 8 [ label = "Field" ]
    1 -> 2 [ label = "Field" ]
}
