crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__derive__batch_single_id-finalized-solution.snap
---
source: crates/engine/query-solver/src/tests/derive.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"Root#ext\", color=royalblue,shape=parallelogram ]\n    2 [ label = \"Query.products\" ]\n    3 [ label = \"Product.comments\" ]\n    4 [ label = \"Product.commentIds\" ]\n    5 [ label = \"Comment.id\" ]\n    0 -> 1 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    4 -> 5 [ label = \"\", color=darkorchid,arrowhead=halfopen,style=dashed ]\n    2 -> 3 [ label = \"\" ]\n    2 -> 4 [ label = \"\" ]\n    4 -> 3 [ label = \"\", color=darkorchid,arrowhead=halfopen,style=dashed ]\n    3 -> 5 [ label = \"\" ]\n    1 -> 2 [ label = \"\" ]\n}\n"
---
digraph {
    0 [ label = "root" ]
    1 [ label = "Root#ext" ]
    2 [ label = "Query.products" ]
    3 [ label = "Product.comments" ]
    4 [ label = "Product.commentIds" ]
    5 [ label = "Comment.id" ]
    0 -> 1 [ label = "QueryPartition" ]
    4 -> 5 [ label = "Derive" ]
    2 -> 3 [ label = "Field" ]
    2 -> 4 [ label = "Field" ]
    4 -> 3 [ label = "Derive" ]
    3 -> 5 [ label = "Field" ]
    1 -> 2 [ label = "Field" ]
}
