crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__derive__single_id-graph.snap
---
source: crates/engine/query-solver/src/tests/derive.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"Query.products\" ]\n    2 [ label = \"Product.author\" ]\n    3 [ label = \"User.id\" ]\n    4 [ label = \"Root#ext\", shape=parallelogram, color=dodgerblue ]\n    5 [ label = \"products#ext\", shape=box, color=dodgerblue ]\n    6 [ label = \"author#ext@derive\", shape=box, color=dodgerblue ]\n    7 [ label = \"id#ext@derive\", shape=box, color=dodgerblue ]\n    0 -> 1 [ label = \"\" ]\n    1 -> 2 [ label = \"\" ]\n    2 -> 3 [ label = \"\" ]\n    0 -> 4 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    0 -> 4 [ label = \"\", style=dashed,arrowhead=none ]\n    4 -> 5 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    5 -> 1 [ label = \"\", color=violet,arrowhead=none ]\n    5 -> 6 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    6 -> 2 [ label = \"\", color=violet,arrowhead=none ]\n    6 -> 7 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    7 -> 3 [ label = \"\", color=violet,arrowhead=none ]\n}\n"
---
digraph {
    0 [ root]
    1 [ Query.products]
    2 [ Product.author]
    3 [ User.id]
    4 [ Root#ext]
    5 [ products#ext]
    6 [ author#ext@derive]
    7 [ id#ext@derive]
    0 -> 1 [ label = "Field" ]
    1 -> 2 [ label = "Field" ]
    2 -> 3 [ label = "Field" ]
    0 -> 4 [ label = "CreateChildResolver" ]
    0 -> 4 [ label = "HasChildResolver" ]
    4 -> 5 [ label = "CanProvide" ]
    5 -> 1 [ label = "Provides" ]
    5 -> 6 [ label = "CanProvide" ]
    6 -> 2 [ label = "Provides" ]
    6 -> 7 [ label = "CanProvide" ]
    7 -> 3 [ label = "Provides" ]
}
